# robotis_op2_description

./: CMakeLists.txt  package.xml
config/: controllers.yaml
launch/: robot.launch.py  webots.launch.py
rviz/: robot.rviz
urdf/: robotis_op2.urdf.xacro  robotis_op2.webots.xacro
world/: .robocup.wbproj  robocup.wbt
